# rust-demos

./: Cargo.toml  README.md  data-variables.json  hello.txt
src/: add.rs  arc_demo.rs  arc_mutex_demo.rs  box_demo.rs  command_demo.rs  demo.rs  display_demo.rs  enum_demo.rs  filetest.rs  hello.rs  inventory.rs  iterator.rs  main.rs  match_demo.rs  mutex_demo.rs  object_demo.rs  path_demo.rs  screen_rotate.rs  thread_demo.rs  vector.rs  xinput_demo.rs
src/base_practice/: generics_demo.rs  if_demo.rs  impl_demo.rs  match_demo.rs  mod.rs  traits_demo.rs
src/cal/: all_cells_dist_order.rs  array_rank_transform.rs  balanced_string_split.rs  busy_student.rs  cal.rs  can_make_arithmetic_progression.rs  check_if_exist.rs  count_binary_substrings.rs  count_characters.rs  count_largest_group.rs  count_nodes.rs  count_students.rs  decompress_rl_elist.rs  defang_i_paddr.rs  dest_city.rs  detect_capital_use.rs  diagonal_sum.rs  distribute_candies.rs  duplicate_zeros.rs  find_kth_positive.rs  find_lucky.rs  find_special_integer.rs  find_the_distance_value.rs  freq_alphabets.rs  gcd_of_strings.rs  get_decimal_value.rs  get_maximum_generated.rs  is_palindrome.rs  is_valid_bracket.rs  is_valid_sudoku.rs  k_length_apart.rs  k_weakest_rows.rs  last_stone_weight.rs  lru_cache.rs  max_common_prefix.rs  max_munber.rs  max_power.rs  max_score.rs  merge.rs  min_start_value.rs  (+23 more)
src/demo_codes/: async_demo.rs  mod.rs
src/file_demo/: mod.rs  read_line.rs  rotate.conf  test_src.conf
src/front_of_host/: hosting.rs
src/json_demo/: mod.rs  test.json
src/mqtt_demo/: client.rs
(+124 files in other folders)
