[package]
name = "demos2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
encoding = "0.2.33"
ferris-says = "0.3.1"
paho-mqtt = "0.12"
openssl = { version = "0.10.57", features = ["vendored"] }
chrono = "0.4.31"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
brotli = "8.0.1"
futures = "0.3"
anyhow = "1.0"
actix-web = "4"
tokio = { version = "1", features = ["full"] }
